@@ -14,12 +14,14 @@ print ""
 FS="[ \t.]"
 }
 
-/Revision/ { printf "#define SDCC_BUILD_NUMBER\t\"%s\"\n", $2 }
+/Revision/ { printf "#define SDCC_BUILD_NUMBER   \"%s\"\n", $2 }
+/Revision/ { printf "#define SDCC_BUILD_NR       %s\n", $2 }
 
 END {
 print ""
 print "#ifndef SDCC_BUILD_NUMBER"
 print "#define SDCC_BUILD_NUMBER	\"0\""
+print "#define SDCC_BUILD_NR        0"
 print "#endif"
 print ""
 print "#endif"
